fix max-height to not distort so quickly, should be vh percent of viewport height for height limit

--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -93,7 +93,7 @@
       width: 100%;
       // keep crazy long aspect ratio images from being
       // so long, although there will be some distortion.
-      max-height: 80vw;
+      max-height: 80vh;
     }
 
     .show-page-member-title {
